; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_bfin_5xx.c_bfin_serial_start_tx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_bfin_5xx.c_bfin_serial_start_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.bfin_serial_port = type { i64, i64, %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.tty_struct* }
%struct.tty_struct = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }

@N_IRDA = common dso_local global i64 0, align 8
@ETBEI = common dso_local global i32 0, align 4
@TIOCM_CTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*)* @bfin_serial_start_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfin_serial_start_tx(%struct.uart_port* %0) #0 {
  %2 = alloca %struct.uart_port*, align 8
  %3 = alloca %struct.bfin_serial_port*, align 8
  %4 = alloca %struct.tty_struct*, align 8
  store %struct.uart_port* %0, %struct.uart_port** %2, align 8
  %5 = load %struct.uart_port*, %struct.uart_port** %2, align 8
  %6 = bitcast %struct.uart_port* %5 to %struct.bfin_serial_port*
  store %struct.bfin_serial_port* %6, %struct.bfin_serial_port** %3, align 8
  %7 = load %struct.bfin_serial_port*, %struct.bfin_serial_port** %3, align 8
  %8 = getelementptr inbounds %struct.bfin_serial_port, %struct.bfin_serial_port* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load %struct.tty_struct*, %struct.tty_struct** %12, align 8
  store %struct.tty_struct* %13, %struct.tty_struct** %4, align 8
  %14 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %15 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @N_IRDA, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %1
  %22 = load %struct.uart_port*, %struct.uart_port** %2, align 8
  %23 = call i32 @bfin_serial_reset_irda(%struct.uart_port* %22)
  br label %24

24:                                               ; preds = %21, %1
  %25 = load %struct.bfin_serial_port*, %struct.bfin_serial_port** %3, align 8
  %26 = load i32, i32* @ETBEI, align 4
  %27 = call i32 @UART_SET_IER(%struct.bfin_serial_port* %25, i32 %26)
  %28 = load %struct.bfin_serial_port*, %struct.bfin_serial_port** %3, align 8
  %29 = call i32 @bfin_serial_tx_chars(%struct.bfin_serial_port* %28)
  ret void
}

declare dso_local i32 @bfin_serial_reset_irda(%struct.uart_port*) #1

declare dso_local i32 @UART_SET_IER(%struct.bfin_serial_port*, i32) #1

declare dso_local i32 @bfin_serial_tx_chars(%struct.bfin_serial_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
